crates/onyx-md/tests/snapshots/extract_corpus__code-heavy.md.snap
---
source: crates/onyx-md/tests/extract_corpus.rs
expression: describe(source)
---
frontmatter_tags: []
frontmatter_aliases: []
word_count: 23
headings:
  H1 "Code"
tags:
  #real-tag
links:
  Wiki target="Link" heading=None block=None alias=None
